# fin-pulse

./: .gitignore  README.md  app.py
Ambiente_Virtual/: pyvenv.cfg
Ambiente_Virtual/Scripts/: activate  activate.bat
api/: README.md
api/mockoon/: api.json  demo.json
api/src/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
api/src/db/: db_connection.py  stocks.py  users.py
api/src/models/: stocks.py  users.py
app/: Dockerfile  README.md
app/src/: main.py
data_flow_batch/: Dockerfile  README.md  docker-compose.yaml  hello.py  pyproject.toml  requirements.txt  test_yfinance.py
data_flow_batch/.astro/: config.yaml
data_flow_batch/dags/: daily.py
data_flow_batch/include/: load_stock_daily.py  load_stock_historical.py  test_yfinance.py
data_flow_batch/include/backend/: database.py
data_flow_batch/src/: load_stock_daily.py  load_stock_historical.py  test_yfinance.py
data_flow_batch/src/backend/: database.py
database/: README.md  docker-compose.yaml
database/backup/: README.md  data.sql  data_dev.sql
database/tables/: README.md  create_db.sql  expenses.sql  expenses_categories.sql  stock_data.sql  stock_performance.sql  stocks.sql  tables.sql  user_activity_logs.sql  user_selections.sql  users.sql  watchlists,sql  watchlists.sql
frontend/: pyproject.toml  requirements.txt
frontend/src/: app.py  create_account.py  dashboard.py  login.py  main.py
frontend/src/backend/: stocks.py  users.py
frontend/src/frontend/: app.py  login copy.py
